@@ -1,26 +1,25 @@
 import java.util.*;
 
 public class UserQueue {
-    private ArrayList<User> queue;
+    private LinkedList<User> queue;
     private int maxUsers;
 
     public UserQueue() {
-        queue = new ArrayList<>();
+        queue = new LinkedList<>();
         maxUsers = 5;
     }
 
     public UserQueue(int maxUsers) {
-        queue = new ArrayList<>();
+        queue = new LinkedList<>();
         this.maxUsers = maxUsers;
     }
 
-    // Core Queue Operations
     public boolean enqueue(User user) {
         if (isFull()) {
             System.out.println("❌ Antrian penuh! Maksimal " + maxUsers + " user.");
             return false;
         }
-        queue.add(user);
+        queue.addLast(user);
         System.out.println("✅ " + user.getUsername() + " masuk antrian. Posisi: " + queue.size());
         return true;
     }
@@ -30,30 +29,34 @@ public class UserQueue {
             System.out.println("❌ Antrian kosong!");
             return null;
         }
-        User user = queue.remove(0);
+        User user = queue.removeFirst();
         user.setActive(false);
         System.out.println("✅ " + user.getUsername() + " keluar dari antrian.");
         return user;
     }
 
     public User peek() {
-        return isEmpty() ? null : queue.get(0);
+        return isEmpty() ? null : queue.getFirst();
     }
 
-    // Queue Status
-    public boolean isEmpty() { return queue.isEmpty(); }
-    public boolean isFull() { return queue.size() >= maxUsers; }
-    public int size() { return queue.size(); }
+    public boolean isEmpty() {
+        return queue.isEmpty();
+    }
 
-    // User Management
+    public boolean isFull() {
+        return queue.size() >= maxUsers;
+    }
+
+    public int size() {
+        return queue.size();
+    }
+
     public boolean loginUser(User user) {
         if (findUserPosition(user.getUsername()) != -1) {
             System.out.println("⚠️ " + user.getUsername() + " sudah ada dalam antrian!");
             return false;
         }
-
         if (enqueue(user)) {
-            // Set user pertama sebagai aktif
             if (queue.size() == 1) {
                 user.setActive(true);
                 System.out.println("👑 " + user.getUsername() + " menjadi user aktif!");
@@ -68,8 +71,6 @@ public class UserQueue {
         if (activeUser != null) {
             System.out.println("👋 " + activeUser.getUsername() + " logout dari sesi aktif.");
             dequeue();
-
-            // Aktifkan user selanjutnya
             User nextUser = getCurrentActiveUser();
             if (nextUser != null) {
                 nextUser.setActive(true);
@@ -77,7 +78,6 @@ public class UserQueue {
             }
             return true;
         }
-
         System.out.println("❌ Tidak ada user aktif saat ini.");
         return false;
     }
@@ -86,12 +86,13 @@ public class UserQueue {
         return peek();
     }
 
-    // Utility Methods
     public int findUserPosition(String username) {
-        for (int i = 0; i < queue.size(); i++) {
-            if (queue.get(i).getUsername().equalsIgnoreCase(username)) {
-                return i + 1; // 1-based position
+        int position = 1;
+        for (User user : queue) {
+            if (user.getUsername().equalsIgnoreCase(username)) {
+                return position;
             }
+            position++;
         }
         return -1;
     }
@@ -101,12 +102,13 @@ public class UserQueue {
             System.out.println("📋 Antrian kosong.");
             return;
         }
-
         System.out.println("\n📋 ANTRIAN USER SAAT INI:");
         System.out.println("==========================");
-        for (int i = 0; i < queue.size(); i++) {
-            String status = (i == 0) ? " 👑 (AKTIF)" : " ⏳ (MENUNGGU)";
-            System.out.println((i + 1) + ". " + queue.get(i).getUsername() + status);
+        int index = 1;
+        for (User user : queue) {
+            String status = (index == 1) ? " 👑 (AKTIF)" : " ⏳ (MENUNGGU)";
+            System.out.println(index + ". " + user.getUsername() + status);
+            index++;
         }
         System.out.println("Total: " + queue.size() + "/" + maxUsers);
     }
